# easycloudapi

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  developer.md  developer_guide.md  requirements-dev.txt  requirements.txt  setup.cfg
docs/: requirements.txt
docs/source/: conf.py  developer contacts.rst  easycloudapi.gcp.bigquery.rst  easycloudapi.gcp.gcp_oauth.rst  easycloudapi.gcp.rst  easycloudapi.generic.datetime.rst  easycloudapi.generic.rst  easycloudapi.rst  help.rst  index.rst  modules.rst
src/easycloudapi/gcp/bigquery/: bigquery_schema.py
src/easycloudapi/gcp/gcp_oauth/: gcp_oauth.py
src/easycloudapi/generic/datetime/: generate_date_dimention.py
tests/: test.py
tests/test_data/: sample_json_01.json
