[metadata]
name = easycloudapi
version = 0.0.4
author = Indranil Pal
author_email = info.easycloudapi@gmail.com
description = Providing utility functions to help other python developers
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = EasyCloudApi, GCP, AWS, AZURE, Office365, Cloud, Data Pipeline, ETL, ELT, SQL, Python
url = https://github.com/easycloudapi/python_utility
project_urls =
    Bug Tracker = https://github.com/easycloudapi/python_utility/issues
    repository = https://github.com/easycloudapi/python_utility
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.5
install_requires = file: requirements.txt

[options.packages.find]
where = src
exclude =
    examples*
    docs*
